--- a/ideportal/public/index.html
+++ b/ideportal/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %>Enable scripts dipshit.</strong>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> requires scripts to be enabled dipshit.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
