NO CORS - w/dummydata

--- a/ideportal.backend/ideportal.backend/wwwroot/index.html
+++ b/ideportal.backend/ideportal.backend/wwwroot/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>-->
 </head>
 <body>
     hei, velkommen til index:)
+
+    <div id="app"></div>
+
     <script>
-        getData();
+            //getData();
 
-        async function getData() {
+            //async function getData() {
 
-            const response = await axios.get('/api/project');
-            console.log(response.data);
-        }
+            //    const response = await axios.get('/api/project');
+            //    console.log(response.data);
+            //}
 
     </script>
 </body>
