cors header problem fixed, projects subittable to table from vue

--- a/ideportal.backend/ideportal.backend/vueclient/public/index.html
+++ b/ideportal.backend/ideportal.backend/vueclient/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> requires scripts to be enabled dipshit.</strong>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> requires scripts to be enabled. So you go do that now, run along!</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
